--- a/src/app/features/landing/hero/hero.component.html
+++ b/src/app/features/landing/hero/hero.component.html
@@ -30,7 +30,7 @@
         <img
           alt="Monochromatic code snippet background"
           class="hero__image"
-          ngSrc="assets/shared/hero-code-bg.jpg"
+          ngSrc="assets/shared/hero-code-bg.png"
           fill
           sizes="(min-width: 1024px) 50vw, (min-width: 768px) 60vw, 100vw"
           priority
