--- a/src/app/features/landing/contact/contact-section.component.html
+++ b/src/app/features/landing/contact/contact-section.component.html
@@ -22,7 +22,7 @@
           />
           <app-post-it
             title="¿Stacks favoritos?"
-            text="LAMP, DOCKER, KOTLIN Y CUALQUIER COSA QUE MANEJE DATA."
+            text="ANGULAR, DOCKER, .NET Y CUALQUIER COSA QUE MANEJE DATA."
             tone="secondary"
             tilt="left"
           />
