--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,8 @@
   --color-primary: #e63946;
   --color-secondary: #5ded84;
   --color-accent: #ff9f1c;
+  --color-magenta: #ff00ff;
+  --color-cyan: #00ffff;
   --color-darkblue: #1a1a1a;
   --color-dark: #1a1a1a;
   --color-background-light: #e0e0e0;
