--- a/src/app/features/project-detail/nav/project-detail-nav.component.html
+++ b/src/app/features/project-detail/nav/project-detail-nav.component.html
@@ -7,7 +7,8 @@
       </a>
       @if (code) {
         <div class="project-detail-nav__case">
-          CLASSIFIED CASE FILE {{ code }}
+          <span class="project-detail-nav__case-label">CLASSIFIED CASE FILE</span>
+          <span class="project-detail-nav__case-code">#{{ code }}</span>
         </div>
       }
     </div>
